o makefile definitivo da versao cpp (ate cria a matriz ja)

--- a/src/cpp/Makefile
+++ b/src/cpp/Makefile
@@ -9,11 +9,12 @@ gen_bin: cooley_tukey.cpp
 	$(CC) cooley_tukey.cpp -o cpp
 
 gen_data: gen_bin
-	./cpp ../../matrix.txt ./golden.txt
+	python ../../matrix_creator.py ../../images/big.jpg
+	./cpp matrix.txt ./golden.txt
 
 mv_bin: gen_data
 	mkdir -p $(destDir)
-	cp ../../matrix.txt $(destDir)
+	mv matrix.txt $(destDir)
 	mv ./cpp $(destDir)
 	mv ./golden.txt $(destDir)
 	cp ./cpp.conf $(destDir)
