Fixed python makefile

--- a/src/py/Makefile
+++ b/src/py/Makefile
@@ -10,7 +10,7 @@ gen_data:
 mv_bin: gen_data
 	mkdir -p $(destDir)
 	mv matrix.txt $(destDir)
-	mv cooley_tukey.py $(destDir)
+	cp cooley_tukey.py $(destDir)
 	mv golden.txt $(destDir)
 	cp py.conf $(destDir)
 	@echo "All Done, executables should be in the $(destDir)"
